<resources>
    <string name="app_name">Lesson3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank21_fragment">Hel   lo blank fragment</string>
    <string name="music">Music:</string>
    <string name="favorites">favorites</string>
    <string name="places">places</string>
    <string name="news">" news"</string>
    <string name="quiz">Quiz</string>
    <string name="stats">stats</string>
    <string name="settings">settings</string>
    <string name="complexity">Complexity:</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="theme">Theme:</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="first_question">What is the capital of Singapore?</string>
    <string name="second_question">How many oceans on the planet?</string>
    <string name="third_question">Which country won the first FIFA World Cup?</string>
    <string name="fourth_question">What is the most populous city in the world?</string>
    <string name="fifth_question">What person in 1969 first set foot on the moon?</string>
    <string name="play">Play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

